<resources>
    <string name="app_name">PlanTry</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_in">Log in</string>
    <string name="switch_signup">New User? SIGN UP</string>
    <string name="by_signing_">By signing up, you agree to PlanTry\'s Terms of Service and Privacy Policy.</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">next</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_pw">Forget Password?</string>
    <string name="welcome_user">Welcome </string>
    <string name="do_what">What do you want to do today?</string>
    <string name="buy_groceries">Buy Groceries</string>
    <string name="manage_pantry">Manage Pantry</string>
    <string name="manage_household">Manage Household</string>
    <string name="find_recipes">Find Recipes</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="change_my_password">Change my password</string>
    <string name="contact_us"><i>To contact us, click here</i></string>
</resources>

