<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="45sp"
    android:paddingRight="45sp"
    android:background="#B0D793"
    android:orientation="vertical">


    <!--Welcome Screen-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_extralight"
        android:gravity="top"
        android:layout_marginTop="34sp"
        android:text="@string/welcome_user"
        android:textColor="#1C0F13"
        android:textSize="32sp"/>

    <!--Display User Name-->
    <TextView
        android:id="@+id/lbl_displayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:fontFamily="@font/work_sans_semibold"
        android:gravity="top"
        android:text=""
        android:textColor="#1C0F13"
        android:textSize="32sp" />

    <!-- What do you want to do today? -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_what"
        android:fontFamily="@font/comfortaa"
        android:textSize="36sp"
        android:textColor="#133B12"
        android:gravity="center_vertical"/>

    <!--buy groceries button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buy_groceries"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="#FFF"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto"
        android:paddingStart="20dp"
        android:text="@string/buy_groceries"
        android:textAlignment="viewStart"
        android:textColor="#133B12"
        android:textSize="18sp"/>

    <!--buy groceries button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/manage_pantry"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="13dp"
        android:background="#FFF"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto"
        android:paddingStart="20dp"
        android:text="@string/manage_pantry"
        android:textAlignment="viewStart"
        android:textColor="#133B12"
        android:textSize="18sp"/>

    <!--buy groceries button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/manage_household"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="13dp"
        android:background="#FFF"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto"
        android:paddingStart="20dp"
        android:text="@string/manage_household"
        android:textAlignment="viewStart"
        android:textColor="#133B12"
        android:textSize="18sp"/>

    <!--buy groceries button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/find_recipe"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="13dp"
        android:background="#FFF"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto"
        android:paddingStart="20dp"
        android:text="@string/find_recipes"
        android:textAlignment="viewStart"
        android:textColor="#133B12"
        android:textSize="18sp"/>

    <!--Log out-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="#00000000"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:fontFamily="@font/work_sans"
        android:text="@string/log_out"
        android:textSize="18sp"/>

</LinearLayout>