<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignUp_2">

    <!-- Register Header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="34.2dp"
        android:layout_marginEnd="29dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center_vertical"
        android:text="@string/register"
        android:textAppearance="@style/log_in" />

    <!--Registration Details-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <!--Username-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Signup Button-->
        <TextView
            android:id="@+id/by_signing_"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="60sp"
            android:fontFamily="@font/roboto"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/by_signing_"
            android:textAppearance="@style/by_signing_"
            android:translationY="1.38sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="#133B12"
            android:text="@string/sign_up"
            android:textColor="#fff" />

        <!--Switch to Log in Page-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/already_have_an_account_login" />

    </LinearLayout>

</LinearLayout>