<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <!-- Log in Header-->
    <TextView
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="34.2dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center_vertical"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in" />

        <!--Username/Pw Input Box-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="29dp"
            android:orientation="vertical">

            <!--Username-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_username"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_password"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Forget Password Button-->
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/forget_pw"
                android:id="@+id/resetPassword_btn"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                />

            <!--Login Button-->
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:id="@+id/login_go_btn"
                android:background="#133B12"
                android:textColor="#fff"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <!--Switch to Sign up Page-->
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_gravity="center"
                android:text="@string/switch_signup"
                android:id="@+id/signup_screen"
                android:layout_marginTop="0dp"/>

        </LinearLayout>

</LinearLayout>